# Cravara

./: .gitignore  .mcp.json  README.md
.claude/: settings.local.json
Cravera Assets/Tile Sets/: Free Version v2-1-5.rar
ai/: AI_INSTRUCTIONS.md  CODE_STYLE.md
assets_raw/: Untitled design (3).aseprite
assets_raw/Main Character/: Pickup_Right.aseprite
assets_raw/Tile Sets/: Cute lil world decorations.rar
cravera-test/: GrasslandBiome.tscn  RockSpawner.gd  RockSpawner.gd.uid  camera_2d.gd.uid  playground.tscn
cravera-test/Items/: BasicPickaxe.gd  DroppedItem.gd  Item.gd  Log.gd.uid  Plank.gd  Plank.gd.uid  Stone.gd  Stone.gd.uid  TRexMeat.gd  TRexMeat.gd.uid  TRexScale.gd  Torch.gd.uid
cravera-test/Player/: player.tscn
cravera-test/Scripts/: CraftingManager.gd  DestructibleObject.gd
cravera-test/Sprites/: trex.gd.uid
cravera-test/Tile Maps/: Firsttilemap.png.import  Firsttilemap.tscn  cravara_tileset.tres
cravera-test/UI/: InventoryUI.gd.uid  SlotUI.gd.uid
cravera-test/WorldObjects/: Fallenlog.gd  Fallenlog.gd.uid  LargeRock.tscn  SimpleRock.tscn  Tree.gd  Workbench.gd  Workbench.gd.uid
docs/: ARCHITECTURE.md  CURRENT_STATE.md  SYSTEMS_ARCHITECTURE.md
game/: playground.tscn  project.godot
game/Autoloads/: AudioManager.gd  GameSettings.gd  SignalBus.gd  (+1 more)
godot_mcp/: README.md  config.py  pyproject.toml  server.py  tscn_parser.py  utils.py
godot_mcp/tools/: creature_generator.py  data_manager.py  debug_tools.py  scene_builder.py  script_manager.py  system_generator.py  world_generator.py
maaack's-menus-template/: project.godot
(+131 files in other folders)
