[project]
name = "godot-mcp"
version = "0.1.0"
description = "MCP server for Godot 4 game development - enables Claude Code to programmatically create scenes, scripts, creatures, and gameplay systems for the Cravara project."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
godot-mcp = "server:main"
